<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">SoluD - Differential Equations Solver</string>
    <string name="insertEquation">Insert your equation:</string>
    <string name="insertEquationHint">Insert your equation here.</string>
    <string name="clear">Clear</string>
    <string name="solve">Solve</string>
    <string name="app_name">SoluD</string>
    <string name="status">Solution status:</string>
    <string name="inputInterpretation">Input interpretation:</string>
    <string name="classification">ODE classification:</string>
    <string name="solutionText">Differential equation solution:</string>
    <string name="save">Save</string>
    <string name="getGraphs">Acquire Graphs</string>
    <string name="solution">Solution Details:</string>
    <string name="wolframCredit">Powered by Wolfram Alpha Computational Knowledge Engine.</string>

</resources>