<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/insertEquation"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etInsertEquation"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:hint="@string/insertEquationHint"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:scrollHorizontally="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="100" >

        <Button
            android:id="@+id/bClear_InsertLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/clear"
            android:textSize="20dp" />

        <Button
            android:id="@+id/bSolve_InsertLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/solve"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>